--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0;
+  font-family: "Inter", sans-serif;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  background-color: #003840;
 }
 
 #loginDiv {
@@ -72,4 +80,119 @@
   height: 6vh;
   font-size: 2vh;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+header {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 1vh;
+}
+header img {
+  aspect-ratio: 1/1;
+  width: 4vh;
+}
+header h1 {
+  font-size: 2.5vh;
+  color: white;
+  margin: 1rem;
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
+header a img {
+  width: 3.5vh;
+  margin-top: 0.5vh;
+}
+
+main {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  margin-top: 5vh;
+}
+main .datePicker {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: repeat(2, 6vh);
+  place-items: center;
+  grid-column-gap: 1rem;
+}
+main .datePicker .changeMonth {
+  background-color: #003840;
+  border: 0px;
+  border-radius: 100%;
+  width: 8vw;
+  height: 8vw;
+  display: grid;
+  place-items: center;
+}
+main .datePicker .changeMonth img {
+  aspect-ratio: 1/1;
+  border: 0px;
+  width: 50%;
+}
+main .datePicker .changeMonth:active {
+  background-color: #002c33;
+}
+main .datePicker .changeMonth #lastMonth {
+  transform: rotateZ(90deg);
+}
+main .datePicker .changeMonth #nextMonth {
+  transform: rotateZ(-90deg);
+}
+main .datePicker #year {
+  grid-column: 1/4;
+  align-self: start;
+  font-size: 3vw;
+}
+main .calendarContainer {
+  width: 80vw;
+  height: 35vh;
+  background-color: rgb(0, 90, 91);
+  border-radius: 2vh;
+  display: grid;
+  place-items: center;
+}
+main .calendarContainer .calendar {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  place-items: center;
+  width: 72vw;
+  height: 32vh;
+}
+main .calendarContainer .calendar .dayHeader {
+  width: 4vh;
+  height: 4vh;
+  display: grid;
+  place-items: center;
+}
+main .calendarContainer .calendar .dayHeader p {
+  font-size: 1.5vh;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+main .calendarContainer .calendar .day {
+  background-color: #007369;
+  width: 4vh;
+  height: 4vh;
+  border-radius: 1.2vh;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  display: grid;
+  place-items: center;
+}
+main .calendarContainer .calendar .day p {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+main .yourBookings {
+  width: 80vw;
+  display: flex;
+  margin-top: 2.5rem;
+}
+main .yourBookings h2 {
+  font-size: 2.3vh;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-weight: bolder;
 }/*# sourceMappingURL=main.css.map */
