--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,4 +1,7 @@
 $background: #003840;
+$backgroundActive: #002c33;
+$calendarBackground: rgb(0,90,91);
+$calendarDayBackground: #007369;
 $yourBooking: #009BBD;
 $hasInflux: #FFD348;
 $confirmButton: #02A676;
