--- a/main.scss
+++ b/main.scss
@@ -15,8 +15,7 @@ body{
 
 #loginDiv {
     background-color: $background;
-    width: 100vw;
-    height: 100vh;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,15 +33,16 @@ body{
             display: flex;
 
             div.imageContainer{
-                height: 4vh;
-                width: 4vh;
-                padding: 1vh;
+                height: 3.5vh;
+                width: 3.5vh;
+                padding: 1.2vh;
                 background-color: white;
                 border-radius: 100%;
                 position: absolute;
                 display: grid;
                 place-items: center;
                 margin: 2.2vh;
+                
                 img{
                     aspect-ratio: 1/1;
                     height: 3vh;
@@ -53,14 +53,14 @@ body{
         
     .loginInput {
         margin: 2vh;
-        border-radius: $loginRadius;
+        border-radius: $loginRadius+1vh;
         border: 0.1em solid #005A5B;
         background-color: #00444E;
         display: block;
         width: 60vw;
         height: 6vh;
         font: $font;
-        font-size: 2vh;
+        font-size: 1.5vh;
         color:white;
         box-shadow: $boxShadow;
         text-align: center;
