--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@ main .calendarContainer {
   display: grid;
   place-items: center;
 }
-main .calendarContainer .calendar {
+main .calendarContainer #calendar {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
@@ -162,17 +162,17 @@ main .calendarContainer .calendar {
   width: 72vw;
   height: 32vh;
 }
-main .calendarContainer .calendar .dayHeader {
+main .calendarContainer #calendar .dayHeader {
   width: 4vh;
   height: 4vh;
   display: grid;
   place-items: center;
 }
-main .calendarContainer .calendar .dayHeader p {
+main .calendarContainer #calendar .dayHeader p {
   font-size: 1.5vh;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-main .calendarContainer .calendar .day {
+main .calendarContainer #calendar .day {
   background-color: #007369;
   width: 4vh;
   height: 4vh;
@@ -181,7 +181,7 @@ main .calendarContainer .calendar .day {
   display: grid;
   place-items: center;
 }
-main .calendarContainer .calendar .day p {
+main .calendarContainer #calendar .day p {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 main .yourBookings {
