--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,10 @@ main .calendarContainer #calendar .day {
 main .calendarContainer #calendar .day p {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+main .calendarContainer #calendar .day:active {
+  background-color: #0a3531;
+  filter: none;
+}
 main .yourBookings {
   width: 80vw;
   display: flex;
