--- a/main.scss
+++ b/main.scss
@@ -201,6 +201,11 @@ main{
                 p{
                     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                 }
+
+                &:active{
+                    background-color: $calendarDayBackgroundActive;
+                    filter: none;
+                }
             }
         }
     }
