--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,13 @@
   font-family: "Inter", sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 0;
+}
+
 body {
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
   background-color: #003840;
 }
 
@@ -109,7 +113,6 @@ main {
   flex-direction: column;
   align-items: center;
   color: white;
-  margin-top: 5vh;
 }
 main .datePicker {
   display: grid;
@@ -192,9 +195,64 @@ main .yourBookings {
   width: 80vw;
   display: flex;
   margin-top: 2.5rem;
+  flex-direction: column;
 }
 main .yourBookings h2 {
   font-size: 2.3vh;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-weight: bolder;
+  margin-bottom: 1rem;
+}
+main .yourBookings #bookingContainer {
+  max-height: 20vh;
+  overflow-y: auto;
+}
+main .yourBookings #bookingContainer .booking {
+  background-color: #007369;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border-radius: 2vh;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  align-items: center;
+  font-size: 1.5vh;
+}
+main .yourBookings #bookingContainer .booking p {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+main .yourBookings #bookingContainer .booking p strong {
+  font-size: 2vh;
+}
+main .yourBookings #bookingContainer .booking button {
+  grid-row: 1/3;
+  grid-column: 3/4;
+  background-color: #770000;
+  color: white;
+  border-radius: 1vh;
+  padding: 1rem;
+  border: 0px;
+  place-self: center;
+  text-transform: uppercase;
+  font-weight: bolder;
+  font-size: 0.8rem;
+}
+main .yourBookings #expandBookings {
+  background-color: #003840;
+  border: 0px;
+  border-radius: 100%;
+  width: 12vw;
+  height: 12vw;
+  display: grid;
+  place-items: center;
+  align-self: center;
+}
+main .yourBookings #expandBookings img {
+  aspect-ratio: 1/1;
+  height: 80%;
+  width: 80%;
+}
+main .yourBookings #expandBookings:active {
+  background-color: #002c33;
 }/*# sourceMappingURL=main.css.map */
