--- a/main.scss
+++ b/main.scss
@@ -7,9 +7,13 @@
     font-family: 'Inter', sans-serif;
 }
 
+::-webkit-scrollbar{
+    width:0;
+}
+
 body{
     width: 100vw;
-    height: 100vh;
+    height: 100svh;
     background-color: $background;
 }
 
@@ -123,7 +127,6 @@ main{
     flex-direction: column;
     align-items: center;
     color: white;
-    margin-top: 5vh;
     .datePicker{
         display: grid;
         grid-template-columns: 1fr 3fr 1fr;
@@ -214,11 +217,73 @@ main{
         width: 80vw;
         display: flex;
         margin-top: 2.5rem;
+        flex-direction: column;
 
         h2{
             font-size: 2.3vh;
             text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             font-weight: bolder;
+            margin-bottom: 1rem;
+        }
+
+        #bookingContainer {
+            max-height: 20vh;
+            overflow-y: auto;
+
+            .booking{
+                background-color: $calendarDayBackground;
+                margin-top: 1rem;
+                margin-bottom: 1rem;
+                padding: 1rem;
+                border-radius: 2vh;
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: repeat(2, 1fr);
+                align-items: center;
+                font-size: 1.5vh;
+                
+                p{
+                    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                    strong{
+                        font-size: 2vh;
+                    }
+                }
+
+                button{
+                    grid-row: 1/3;
+                    grid-column: 3/4;
+                    background-color: $errorBoxes;
+                    color: white;
+                    border-radius: 1vh;
+                    padding: 1rem;
+                    border: 0px;
+                    place-self: center;
+                    text-transform: uppercase;
+                    font-weight: bolder;
+                    font-size: 0.8rem;
+                }
+            }
+        }
+
+        #expandBookings{
+            background-color: $background;
+            border: 0px;
+            border-radius: 100%;
+            width: 12vw;
+            height: 12vw;
+            display: grid;
+            place-items: center;
+            
+            align-self: center;
+            img{
+                aspect-ratio: 1/1;
+                height: 80%;
+                width: 80%;
+            }
+
+            &:active{
+                background-color: $backgroundActive;
+            }
         }
     }
 }
