--- a/main.scss
+++ b/main.scss
@@ -18,6 +18,7 @@ body{
     background-color: $background;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .background{
