--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -4,7 +4,10 @@ $calendarBackground: rgb(0,90,91);
 $calendarDayBackground: #007369;
 $calendarDayBackgroundActive: #0a3531;
 $yourBooking: #009BBD;
+$yourBookingActive: #007e9b;
 $hasInflux: #FFD348;
+$hasInfluxActive: #d4b03a;
+$fullBookActive: #550000;
 $confirmButton: #02A676;
 $errorBoxes: #770000;
 $hover: #008C81;
