--- a/main.scss
+++ b/main.scss
@@ -332,13 +332,16 @@ main{
         }
 
         #bookingContainer {
-            max-height: 20vh;
+            max-height: 25vh;
             overflow-y: auto;
-
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             .booking{
+                width: 80%;
                 background-color: $calendarDayBackground;
-                margin-top: 1rem;
-                margin-bottom: 1rem;
+                margin-top: 0.5rem;
+                margin-bottom: 0.5rem;
                 padding: 1rem;
                 border-radius: 2vh;
                 display: grid;
@@ -350,7 +353,7 @@ main{
                 p{
                     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                     strong{
-                        font-size: 2vh;
+                        font-size: 1.5vh;
                     }
                 }
 
@@ -374,6 +377,17 @@ main{
                     align-content: center;
                 }
             }
+        }
+
+        .blurry{
+            width: 100%vw;
+            height: 2vh;
+            filter: blur(5px);
+            backdrop-filter: blur(10px);
+            background-color: $backgroundBlur;
+            z-index: 2;
+            position: relative;
+            bottom: 1vh;
         }
 
         #expandBookings{
