--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,4 +1,5 @@
 $background: #003840;
+$backgroundBlur: rgba(0, 55, 64, 0.8);
 $backgroundActive: #002c33;
 $calendarBackground: rgb(0,90,91);
 $calendarDayBackground: #007369;
