--- a/css/main.css
+++ b/css/main.css
@@ -303,6 +303,14 @@ main .calendarContainer #calendar .fullBookings:active {
   background-color: #550000;
   filter: none;
 }
+main .calendarContainer .bookingSelector {
+  width: 80vw;
+  height: 35vh;
+  background-color: rgba(0, 0, 0, 0.25);
+  border-radius: 2vh;
+  z-index: 3;
+  position: absolute;
+}
 main .yourBookings {
   width: 80vw;
   display: flex;
@@ -310,6 +318,7 @@ main .yourBookings {
   flex-direction: column;
 }
 main .yourBookings h2 {
+  margin-left: 4vw;
   font-size: 2.3vh;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-weight: bolder;
