--- a/main.scss
+++ b/main.scss
@@ -320,6 +320,15 @@ main{
                 }
             }
         }
+
+        .bookingSelector{
+            width: 80vw;
+            height: 35vh;
+            background-color: rgba(0, 0, 0, 0.25);
+            border-radius: 2vh;
+            z-index: 3;
+            position: absolute;
+        }
     }
 
     .yourBookings{
@@ -329,6 +338,7 @@ main{
         flex-direction: column;
 
         h2{
+            margin-left: 4vw;
             font-size: 2.3vh;
             text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             font-weight: bolder;
