--- a/css/main.css
+++ b/css/main.css
@@ -306,7 +306,7 @@ main .calendarContainer #calendar .fullBookings:active {
 main .calendarContainer .bookingSelector {
   width: 80vw;
   height: 35vh;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgb(0, 90, 91);
   border-radius: 2vh;
   z-index: 3;
   position: absolute;
