--- a/main.scss
+++ b/main.scss
@@ -321,10 +321,12 @@ main{
             }
         }
 
+
+        // SELECTOR DE RESERVAS
         .bookingSelector{
             width: 80vw;
             height: 35vh;
-            background-color: rgba(0, 0, 0, 0.25);
+            background-color: $calendarBackground;
             border-radius: 2vh;
             z-index: 3;
             position: absolute;
