--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -9,6 +9,7 @@ $yourBookingActive: #007e9b;
 $hasInflux: #FFD348;
 $hasInfluxActive: #d4b03a;
 $fullBookActive: #550000;
+$hourSelectorClicked: #007369;
 $confirmButton: #02A676;
 $errorBoxes: #770000;
 $hover: #008C81;
