--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,33 @@ main .calendarContainer .bookingSelector {
   border-radius: 2vh;
   z-index: 3;
   position: absolute;
+  display: grid;
+  grid-template-rows: 20% 50% 30%;
+  grid-template-columns: repeat(2, 1fr);
+}
+main .calendarContainer .bookingSelector .hourContainer {
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  place-items: center;
+  margin-left: 2vh;
+  margin-right: 2vh;
+  grid-row-gap: 0.7vh;
+}
+main .calendarContainer .bookingSelector .hourContainer .hour {
+  background-color: #008C81;
+  width: 80%;
+  height: 80%;
+  border-radius: 1vh;
+  display: grid;
+  place-items: center;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+main .calendarContainer .bookingSelector .hourContainer .clicked {
+  filter: none;
+  transform: translate(1px);
+  box-shadow: inset 0 0 5px black;
 }
 main .yourBookings {
   width: 80vw;
