--- a/main.scss
+++ b/main.scss
@@ -330,6 +330,38 @@ main{
             border-radius: 2vh;
             z-index: 3;
             position: absolute;
+
+            display: grid;
+            grid-template-rows: 20% 50% 30%;
+            grid-template-columns: repeat(2, 1fr);
+
+            .hourContainer{
+                grid-column: 1/3;
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: repeat(3, 1fr);
+                place-items: center;
+                margin-left: 2vh;
+                margin-right: 2vh;
+                grid-row-gap: 0.7vh;
+
+                .hour{
+                    background-color: $hover;
+                    width: 80%;
+                    height: 80%;
+                    border-radius: 1vh;
+                    display: grid;
+                    place-items: center;
+                    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+                }
+
+                .clicked{
+                    
+                    filter: none;
+                    transform: translate(1px);
+                    box-shadow: inset 0 0 5px black;
+                }
+            }
         }
     }
 
