--- a/css/main.css
+++ b/css/main.css
@@ -312,22 +312,29 @@ main .calendarContainer .bookingSelector {
   position: absolute;
   display: grid;
   grid-template-rows: 20% 50% 30%;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+}
+main .calendarContainer .bookingSelector p.date {
+  place-self: center;
+  font-weight: bolder;
+  grid-column: 1/4;
+  font-size: 2vh;
+  margin-top: 1rem;
 }
 main .calendarContainer .bookingSelector .hourContainer {
-  grid-column: 1/3;
+  grid-column: 1/5;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   place-items: center;
-  margin-left: 2vh;
-  margin-right: 2vh;
-  grid-row-gap: 0.7vh;
+  margin: 2vh;
+  grid-row-gap: 1vh;
+  grid-column-gap: 1vh;
 }
 main .calendarContainer .bookingSelector .hourContainer .hour {
   background-color: #008C81;
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   border-radius: 1vh;
   display: grid;
   place-items: center;
@@ -335,8 +342,20 @@ main .calendarContainer .bookingSelector .hourContainer .hour {
 }
 main .calendarContainer .bookingSelector .hourContainer .clicked {
   filter: none;
-  transform: translate(1px);
   box-shadow: inset 0 0 5px black;
+}
+main .calendarContainer .bookingSelector .confirmDiv {
+  grid-column: 1/3;
+  background-color: #007369;
+  place-self: center;
+  width: 80%;
+  height: 80%;
+  margin-bottom: 1rem;
+  margin-left: 0.3rem;
+  border-radius: 1vh;
+}
+main .calendarContainer .bookingSelector .infoDiv {
+  grid-column: 3/5;
 }
 main .yourBookings {
   width: 80vw;
@@ -375,7 +394,7 @@ main .yourBookings #bookingContainer .booking p {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 main .yourBookings #bookingContainer .booking p strong {
-  font-size: 1.5vh;
+  font-size: 1.3vh;
 }
 main .yourBookings #bookingContainer .booking button {
   grid-row: 1/3;
