--- a/main.scss
+++ b/main.scss
@@ -330,25 +330,32 @@ main{
             border-radius: 2vh;
             z-index: 3;
             position: absolute;
-
             display: grid;
             grid-template-rows: 20% 50% 30%;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(4, 1fr);
+
+            p.date{
+                place-self: center;
+                font-weight: bolder;
+                grid-column: 1/4;
+                font-size: 2vh;
+                margin-top: 1rem;
+            }
 
             .hourContainer{
-                grid-column: 1/3;
+                grid-column: 1/5;
                 display: grid;
                 grid-template-columns: repeat(3, 1fr);
                 grid-template-rows: repeat(3, 1fr);
                 place-items: center;
-                margin-left: 2vh;
-                margin-right: 2vh;
-                grid-row-gap: 0.7vh;
+                margin: 2vh;
+                grid-row-gap: 1vh;
+                grid-column-gap: 1vh;
 
                 .hour{
                     background-color: $hover;
-                    width: 80%;
-                    height: 80%;
+                    width: 100%;
+                    height: 100%;
                     border-radius: 1vh;
                     display: grid;
                     place-items: center;
@@ -356,11 +363,25 @@ main{
                 }
 
                 .clicked{
-                    
                     filter: none;
-                    transform: translate(1px);
                     box-shadow: inset 0 0 5px black;
+
                 }
+            }
+
+            .confirmDiv{
+                grid-column: 1/3;
+                background-color: $calendarDayBackground;
+                place-self: center;
+                width: 80%;
+                height: 80%;
+                margin-bottom: 1rem;
+                margin-left: 0.3rem;
+                border-radius: 1vh;
+            }
+
+            .infoDiv{
+                grid-column: 3/5;
             }
         }
     }
@@ -401,7 +422,7 @@ main{
                 p{
                     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                     strong{
-                        font-size: 1.5vh;
+                        font-size: 1.3vh;
                     }
                 }
 
