--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -15,3 +15,8 @@
     font-weight: bolder;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+@mixin confirmPressedDown {
+    filter: none;
+    background-color: $confirmButtonDisabled;
+}
