--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -11,6 +11,7 @@ $hasInfluxActive: #d4b03a;
 $fullBookActive: #550000;
 $hourSelectorClicked: #007369;
 $confirmButton: #02A676;
+$confirmButtonDisabled: #008059;
 $errorBoxes: #770000;
 $hover: #008C81;
 $font: 'Inter', sans-serif;
