--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
 * {
   margin: 0;
@@ -311,13 +312,13 @@ main .calendarContainer .bookingSelector {
   z-index: 3;
   position: absolute;
   display: grid;
-  grid-template-rows: 20% 50% 30%;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 10% 50% 40%;
+  grid-template-columns: repeat(3, 1fr);
 }
 main .calendarContainer .bookingSelector p.date {
   place-self: center;
   font-weight: bolder;
-  grid-column: 1/4;
+  grid-column: 1/3;
   font-size: 2vh;
   margin-top: 1rem;
 }
@@ -348,14 +349,70 @@ main .calendarContainer .bookingSelector .confirmDiv {
   grid-column: 1/3;
   background-color: #007369;
   place-self: center;
-  width: 80%;
+  width: 90%;
   height: 80%;
   margin-bottom: 1rem;
   margin-left: 0.3rem;
   border-radius: 1vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+main .calendarContainer .bookingSelector .confirmDiv p {
+  text-align: center;
+  margin-top: 0.5rem;
+}
+main .calendarContainer .bookingSelector .confirmDiv button {
+  width: 80%;
+  height: 2.5rem;
+  margin-bottom: 1rem;
+  border-radius: 1vh;
+  background-color: #02A676;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: white;
+  font-weight: bold;
+  border: none;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+main .calendarContainer .bookingSelector .confirmDiv button:disabled {
+  filter: none;
+  background-color: #008059;
+}
+main .calendarContainer .bookingSelector .confirmDiv button:active {
+  filter: none;
+  background-color: #008059;
+  transform: scale(95%);
 }
 main .calendarContainer .bookingSelector .infoDiv {
   grid-column: 3/5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-bottom: 1rem;
+  font-size: 0.8rem;
+}
+main .calendarContainer .bookingSelector .infoDiv .halfBooked::before {
+  content: "●";
+  color: #FFD348;
+  margin-right: 2px;
+  margin-top: 2px;
+  font-size: 1.2rem;
+}
+main .calendarContainer .bookingSelector .infoDiv .fullBooked::before {
+  content: "●";
+  color: #770000;
+  margin-right: 2px;
+  margin-top: 2px;
+  font-size: 1.2rem;
+}
+main .calendarContainer .bookingSelector .infoDiv .yourBooking::before {
+  content: "●";
+  color: #009BBD;
+  margin-right: 2px;
+  margin-top: 2px;
+  font-size: 1.2rem;
 }
 main .yourBookings {
   width: 80vw;
