--- a/css/main.css
+++ b/css/main.css
@@ -319,8 +319,9 @@ main .calendarContainer .bookingSelector p.date {
   place-self: center;
   font-weight: bolder;
   grid-column: 1/3;
-  font-size: 2vh;
+  font-size: 1.8vh;
   margin-top: 1rem;
+  margin-left: 1rem;
 }
 main .calendarContainer .bookingSelector .hourContainer {
   grid-column: 1/5;
@@ -340,6 +341,15 @@ main .calendarContainer .bookingSelector .hourContainer .hour {
   display: grid;
   place-items: center;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+main .calendarContainer .bookingSelector .hourContainer .myBooking {
+  background-color: #009BBD;
+}
+main .calendarContainer .bookingSelector .hourContainer .halfBooked {
+  background-color: #FFD348;
+}
+main .calendarContainer .bookingSelector .hourContainer .fullBooked {
+  background-color: #770000;
 }
 main .calendarContainer .bookingSelector .hourContainer .clicked {
   filter: none;
