--- a/main.scss
+++ b/main.scss
@@ -338,8 +338,9 @@ main{
                 place-self: center;
                 font-weight: bolder;
                 grid-column: 1/3;
-                font-size: 2vh;
+                font-size: 1.8vh;
                 margin-top: 1rem;
+                margin-left: 1rem;
             }
 
             .hourContainer{
@@ -360,6 +361,18 @@ main{
                     display: grid;
                     place-items: center;
                     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+                }
+
+                .myBooking{
+                    background-color: $yourBooking;
+                }
+
+                .halfBooked{
+                    background-color: $hasInflux;
+                }
+
+                .fullBooked{
+                    background-color: $errorBoxes;
                 }
 
                 .clicked{
