--- a/css/main.css
+++ b/css/main.css
@@ -358,11 +358,11 @@ main .calendarContainer .bookingSelector .hourContainer .clicked {
 main .calendarContainer .bookingSelector .confirmDiv {
   grid-column: 1/3;
   background-color: #007369;
-  place-self: center;
-  width: 90%;
+  place-self: left;
+  width: 88%;
   height: 80%;
   margin-bottom: 1rem;
-  margin-left: 0.3rem;
+  margin-left: 1rem;
   border-radius: 1vh;
   display: flex;
   flex-direction: column;
@@ -400,7 +400,7 @@ main .calendarContainer .bookingSelector .infoDiv {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-bottom: 1rem;
+  margin-bottom: 1.8rem;
   font-size: 0.8rem;
 }
 main .calendarContainer .bookingSelector .infoDiv .halfBooked::before {
