--- a/scss/media-querys.scss
+++ b/scss/media-querys.scss
@@ -1,33 +1,61 @@
-@media screen and (max-width: 900px) and (orientation: landscape) {
+@media screen and (max-width: 933px) and (orientation: landscape) {
 
-       body{
-        display: flex;
-        flex-direction: row;
+    body{
+
+        width: 100vw;
+        height: 100svh;
+        justify-content: center;
+        align-items: center;
 
         #loginDiv{
             display: flex;
-            flex-direction: row;
-
-            width: 100vw;
-            height: 100svh;
-            margin: 3rem;
+            flex-direction: row;    
 
             .logo{
                 margin: 0px;
-                width: 40vw;
+                width: 40%;
+                height: 30vw;
             }
 
             form{
                 margin: 0px;
+                margin-bottom: 5vh;
+                width: 60%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                div{
+                    width: 90%;
+                    height: 12vh;
+                    margin: 2vh;
+                    .imageContainer{
+                        height: 9.5vh;
+                        width: 9.5vh;
+                        margin-top: 2.6vh;
+                        img{
+                            height: 7vh;
+                        }
+                    }
+                    .loginInput{
+                        width: 100%;
+                        height: 12vh;
+                        font-size: 6vh;
+                        border-radius: 11vh;
+                    }
 
-                .loginInput{
-                    height: 15vh;
-                    width: 50vw;
+                    
+                }
+
+                .errorLogin{
+                    font-size: 6vh;
+                    margin-top: 5vh;
                 }
 
                 #loginButton{
-                    height: 15vh;
-                    width: 50vw;
+                    width: 85%;
+                    height: 12vh;
+                    font-size: 6vh;
+                    border-radius: 11vh;
                 }
             }
         }
