media querys - pagina principal 40%

--- a/main.scss
+++ b/main.scss
@@ -48,6 +48,7 @@ body{
     align-self: center;
     top: 22vh;
     border-radius: 2vh;
+    text-wrap: balance;
 
     strong{
         font-size: 1.5vh;
