--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ body {
   align-self: center;
   top: 22vh;
   border-radius: 2vh;
+  text-wrap: balance;
 }
 #cancelDiv strong {
   font-size: 1.5vh;
@@ -510,59 +511,4 @@ main .yourBookings #expandBookings img {
 }
 main .yourBookings #expandBookings:active {
   background-color: #002c33;
-}
-
-@media screen and (max-width: 933px) and (orientation: landscape) {
-  body {
-    width: 100vw;
-    height: 100svh;
-    justify-content: center;
-    align-items: center;
-  }
-  body #loginDiv {
-    display: flex;
-    flex-direction: row;
-  }
-  body #loginDiv .logo {
-    margin: 0px;
-    width: 40%;
-    height: 30vw;
-  }
-  body #loginDiv form {
-    margin: 0px;
-    margin-bottom: 5vh;
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  body #loginDiv form div {
-    width: 90%;
-    height: 12vh;
-    margin: 2vh;
-  }
-  body #loginDiv form div .imageContainer {
-    height: 9.5vh;
-    width: 9.5vh;
-    margin-top: 2.6vh;
-  }
-  body #loginDiv form div .imageContainer img {
-    height: 7vh;
-  }
-  body #loginDiv form div .loginInput {
-    width: 100%;
-    height: 12vh;
-    font-size: 6vh;
-    border-radius: 11vh;
-  }
-  body #loginDiv form .errorLogin {
-    font-size: 6vh;
-    margin-top: 5vh;
-  }
-  body #loginDiv form #loginButton {
-    width: 85%;
-    height: 12vh;
-    font-size: 6vh;
-    border-radius: 11vh;
-  }
 }/*# sourceMappingURL=main.css.map */
