--- a/css/media-querys.css
+++ b/css/media-querys.css
@@ -1,147 +1,1 @@
-@media screen and (max-width: 933px) and (orientation: landscape) {
-  body {
-    width: 100vw;
-    height: 100svh;
-    justify-content: center;
-    align-items: center;
-  }
-  body #loginDiv {
-    display: flex;
-    flex-direction: row;
-  }
-  body #loginDiv .logo {
-    margin: 0px;
-    width: 40%;
-    height: 30vw;
-  }
-  body #loginDiv form {
-    margin: 0px;
-    margin-bottom: 5vh;
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  body #loginDiv form div {
-    width: 90%;
-    height: 12vh;
-    margin: 2vh;
-  }
-  body #loginDiv form div .imageContainer {
-    height: 9.5vh;
-    width: 9.5vh;
-    margin-top: 2.6vh;
-  }
-  body #loginDiv form div .imageContainer img {
-    height: 7vh;
-  }
-  body #loginDiv form div .loginInput {
-    width: 100%;
-    height: 12vh;
-    font-size: 6vh;
-    border-radius: 11vh;
-  }
-  body #loginDiv form .errorLogin {
-    font-size: 6vh;
-    margin-top: 5vh;
-  }
-  body #loginDiv form #loginButton {
-    width: 85%;
-    height: 12vh;
-    font-size: 6vh;
-    border-radius: 11vh;
-  }
-  header {
-    height: 15svh;
-    width: 100vw;
-    display: flex;
-    padding: 0px;
-    justify-content: space-around;
-    margin-left: 5vw;
-    margin-right: 5vw;
-  }
-  header img {
-    height: 10svh;
-    width: 10svh;
-  }
-  header h1 {
-    margin: 0px;
-    font-size: 3vw;
-  }
-  header a {
-    justify-self: flex-end;
-  }
-  header a img {
-    height: 8svh;
-    width: 8svh;
-  }
-  main {
-    height: 85svh;
-    width: 100vw;
-    display: grid;
-    place-items: center;
-    grid-template-columns: repeat(2, 50vw);
-    grid-template-rows: 10svh 70svh;
-  }
-  main .datePicker {
-    margin-top: 1.5vh;
-    display: grid;
-    grid-template-rows: 0;
-    grid-template-columns: 1fr 2fr 2fr 1fr;
-  }
-  main .datePicker #prv {
-    grid-column: 1/2;
-  }
-  main .datePicker #month {
-    grid-column: 2/3;
-  }
-  main .datePicker #year {
-    font-size: 3vh;
-    grid-column: 3/4;
-  }
-  main .datePicker #nxt {
-    grid-column: 4/5;
-  }
-  main .calendarContainer {
-    width: 30vw;
-    height: 30vw;
-    margin-top: 1.5vh;
-  }
-  main .calendarContainer #calendar {
-    width: 100%;
-    height: 100%;
-  }
-  main .calendarContainer #calendar .dayHeader p {
-    font-size: 1.5vw;
-  }
-  main .calendarContainer #calendar .dayHeader, main .calendarContainer #calendar .day {
-    height: 75%;
-    width: 75%;
-    font-size: auto;
-  }
-  main .yourBookings {
-    grid-column: 2/3;
-    grid-row: 1/3;
-    width: 100%;
-    margin: 0px;
-    height: 100%;
-    margin-top: 1.5vw;
-  }
-  main .yourBookings h2 {
-    font-size: 2vw;
-  }
-  main .yourBookings #bookingContainer {
-    max-height: 85vh;
-  }
-  main .yourBookings #bookingContainer .booking p {
-    font-size: 1vw;
-  }
-  main .yourBookings #bookingContainer .booking p strong {
-    font-size: 1.5vw;
-  }
-  #cancelDiv {
-    min-height: 60vh;
-    max-height: 60vh;
-    margin-bottom: 5vh;
-  }
-}/*# sourceMappingURL=media-querys.css.map */
+/*# sourceMappingURL=media-querys.css.map */
