--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -243,7 +245,7 @@ main .datePicker #year {
   font-size: 3vw;
 }
 main .calendarContainer {
-  width: 80vw;
+  width: 35vh;
   height: 35vh;
   background-color: rgb(0, 90, 91);
   border-radius: 2vh;
@@ -255,7 +257,7 @@ main .calendarContainer #calendar {
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
   place-items: center;
-  width: 72vw;
+  width: 32vh;
   height: 32vh;
 }
 main .calendarContainer #calendar .dayHeader {
@@ -587,20 +589,21 @@ main .yourBookings #expandBookings:active {
     width: 100vw;
     display: flex;
     padding: 0px;
-    justify-content: space-around;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    justify-content: flex-start;
   }
   header img {
     height: 10svh;
     width: 10svh;
+    margin-left: 4vh;
   }
   header h1 {
     margin: 0px;
+    margin-left: 10vh;
     font-size: 3vw;
   }
   header a {
-    justify-self: flex-end;
+    margin-left: auto;
+    margin-right: 4vh;
   }
   header a img {
     height: 8svh;
@@ -722,5 +725,162 @@ main .yourBookings #expandBookings:active {
   }
   #cancelDiv p strong {
     font-size: 2vw;
+  }
+}
+@media screen and (min-width: 1000px) {
+  header {
+    justify-content: flex-start;
+  }
+  header img {
+    height: 5vw;
+    width: 5vw;
+    margin-left: 2vw;
+  }
+  header h1 {
+    font-size: 3vw;
+    margin-left: 2vw;
+  }
+  header a {
+    margin-left: auto;
+    margin-right: 2vw;
+  }
+  header a img {
+    height: 4vw;
+    width: 4vw;
+  }
+  main .datePicker {
+    margin-top: 1.5vh;
+    display: flex;
+    justify-content: space-between;
+    width: 34vw;
+    height: 4vw;
+  }
+  main .datePicker .changeMonth {
+    height: 4vw;
+    width: 4vw;
+  }
+  main .datePicker #prv {
+    order: 1;
+  }
+  main .datePicker #month {
+    font-size: 2.5vw;
+    order: 2;
+  }
+  main .datePicker #year {
+    font-size: 2vw;
+    order: 3;
+    align-self: center;
+    margin-top: 1.2vh;
+  }
+  main .datePicker #nxt {
+    order: 4;
+  }
+  main .datePicker #year {
+    margin-top: 0.5vh;
+  }
+  main .calendarContainer {
+    width: 30vw;
+    height: 30vw;
+  }
+  main .calendarContainer #calendar {
+    width: 28vw;
+    height: 28vw;
+  }
+  main .calendarContainer #bookingSelector {
+    width: 30vw;
+    height: 30vw;
+  }
+  main .yourBookings #bookingContainer {
+    max-height: 35vh;
+  }
+}
+@media screen and (min-width: 1250px) {
+  body {
+    overflow-y: hidden;
+  }
+  header {
+    height: 15vh;
+    padding: 0px;
+  }
+  main {
+    display: grid;
+    grid-template-columns: repeat(2, 50vw);
+    grid-template-rows: 15svh 70svh;
+    place-items: center;
+  }
+  main .calendarContainer {
+    width: 30vw;
+    height: 30vw;
+    place-self: baseline;
+    justify-self: center;
+  }
+  main .calendarContainer #calendar {
+    width: 28vw;
+    height: 28vw;
+  }
+  main .calendarContainer #calendar .dayHeader p {
+    font-size: 1.5vw;
+  }
+  main .calendarContainer #calendar .dayHeader, main .calendarContainer #calendar .day {
+    height: 75%;
+    width: 75%;
+    font-size: auto;
+  }
+  main .calendarContainer #bookingSelector {
+    width: 34vw;
+    height: 26vw;
+  }
+  main .calendarContainer #bookingSelector p.date {
+    font-size: 1.6vw;
+    margin-top: 3vh;
+    margin-left: 2vh;
+  }
+  main .calendarContainer #bookingSelector .closeButton {
+    margin-top: 2vw;
+    padding: 1vw;
+  }
+  main .calendarContainer #bookingSelector .closeButton img {
+    height: 2vw;
+  }
+  main .calendarContainer #bookingSelector .hourContainer {
+    margin: 2vw;
+  }
+  main .calendarContainer #bookingSelector .hourContainer .hour {
+    border-radius: 1vw;
+  }
+  main .calendarContainer #bookingSelector .confirmDiv {
+    border-radius: 1vw;
+  }
+  main .calendarContainer #bookingSelector .confirmDiv p {
+    font-size: 0.8rem;
+  }
+  main .calendarContainer #bookingSelector .confirmDiv button {
+    border-radius: 1vw;
+  }
+  main .calendarContainer #bookingSelector .infoDiv {
+    justify-content: center;
+  }
+  main .calendarContainer #bookingSelector .infoDiv p {
+    font-size: 0.5rem;
+  }
+  main .yourBookings {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    width: 100%;
+    margin: 0px;
+    height: 100%;
+    margin-top: 5.5vw;
+  }
+  main .yourBookings h2 {
+    font-size: 2vw;
+  }
+  main .yourBookings #bookingContainer {
+    max-height: 85vh;
+  }
+  main .yourBookings #bookingContainer .booking p {
+    font-size: 1vw;
+  }
+  main .yourBookings #bookingContainer .booking p strong {
+    font-size: 1.5vw;
   }
 }/*# sourceMappingURL=main.css.map */
