--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,6 +3,7 @@ $backgroundBlur: rgba(0, 55, 64, 0.8);
 $backgroundActive: #002c33;
 $calendarBackground: rgb(0,90,91);
 $calendarDayBackground: #007369;
+$calendarDayUnaviable: #005f57;
 $calendarDayBackgroundActive: #0a3531;
 $yourBooking: #009BBD;
 $yourBookingActive: #007e9b;
