--- a/main.scss
+++ b/main.scss
@@ -294,6 +294,10 @@ main{
                 }
             }
 
+            .unavailableDay{
+                background-color: $calendarDayUnaviable;
+            }
+
             .myBooking{
                 background-color: $yourBooking;
 
@@ -333,6 +337,13 @@ main{
             display: grid;
             grid-template-rows: 10% 50% 40%;
             grid-template-columns: repeat(3, 1fr);
+
+            .errorMessage{
+                grid-column: 1/4;
+                place-self: center;
+                text-wrap: balance;
+                text-align: center;
+            }
 
             p.date{
                 place-self: center;
