--- a/main.scss
+++ b/main.scss
@@ -162,18 +162,24 @@ body{
         text-align: center;
         width: 60vw;
     }
-    #loginButton {
+    .loginButton {
         margin: 2vh;
-        margin-top: 10vh;
+        margin-top: 2vh;
         font: $font;
         font-weight: bold;
         color: #005A5B;
         border-radius: $loginRadius;
-        display: block;
+        background-color: white;
+        display: grid;
+        place-items: center;
         width: 60vw;
         height: 6vh;
         font-size: 2vh;
         box-shadow: $boxShadow;
+        &:link, &:visited &:active{
+            text-decoration: none;
+            color: #005A5B;
+        }
     }
 }
 
@@ -582,6 +588,30 @@ main{
                 background-color: $backgroundActive;
             }
         }
+    }
+}
+
+.fadePopUp{
+    position: absolute;
+    top: 20%;
+    padding: 1rem;
+    background-color: #009c60;
+    border-radius: 1em;
+    animation: popupfade 1.5s ease;
+    opacity: 0;
+    p{
+        color: white;
+        font-size: 1.5rem;
+    }
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+@keyframes popupfade {
+    0% {
+      opacity: 1;
+    }
+    100%{
+        opacity: 0;
     }
 }
 
