--- a/css/main.css
+++ b/css/main.css
@@ -553,6 +553,7 @@ main .yourBookings #expandBookings:active {
   border-radius: 1em;
   animation: popupfade 1.5s ease;
   opacity: 0;
+  z-index: 100;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .fadePopUp p {
